# tsp-vulnerable-app-python-django

./: .gitignore  LICENSE  README.md  pyproject.toml
hello/: views.py
proj/: settings.py  urls.py
