[tool.poetry]
name = "tsp.vuln.app.python.django"
version = "0.1.0"
description = "The Scan Project vulnerable app python, django"
authors = ["Engineering <engineering@localhost>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.8.4"
flake8-bugbear = "^21.3.2"
flake8-fixme = "^1.1.1"
isort = "^5.7.0"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"
